Removed unnecessary scrollbars. Absolutely positioned the LoadingContainer component in the Music component (this is required due to an AlphaTab bug when rendering). Added "View Performances" button back to the MusicCard component. Updated routing.

--- a/web-app/src/components/FormInputs/SelectInput/SelectInput.module.scss
+++ b/web-app/src/components/FormInputs/SelectInput/SelectInput.module.scss
@@ -71,7 +71,6 @@
         border-radius: 10px;
         box-shadow: $primary-box-shadow;
         transition: transform 0.3s ease-in-out;
-        overflow: scroll;
 
         &Show {
             transform: scaleY(1);
