--- a/web-app/src/components/MusicSelection/MusicSelection.module.scss
+++ b/web-app/src/components/MusicSelection/MusicSelection.module.scss
@@ -42,7 +42,7 @@
         margin-top: 20px;
 
         @include media-query($breakpoint: $tablet-breakpoint) {
-            grid-template-columns: repeat(auto-fill, 375px);
+            grid-template-columns: repeat(auto-fill, 410px);
             row-gap: 50px;
             column-gap: 70px;
             margin-top: 30px;
