--- a/web-app/src/components/SideNav/SideNav.module.scss
+++ b/web-app/src/components/SideNav/SideNav.module.scss
@@ -13,7 +13,14 @@
     top: 0;
     left: 0;
     height: 100vh;
-    overflow: scroll;
+    overflow-y: scroll;
+
+    // Removes scrollbar
+    -ms-overflow-style: none;
+    &::-webkit-scrollbar {
+        display: none;
+    }
+    
     @include grid-container(
         $grid-template-rows: 50px 3fr 1fr,
         $grid-template-columns: 1fr,
